# 3lc-compute-plugin-yolo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tlc_plugin_yolo/: __init__.py  plugin.toml  project_store.py  routes.py  runtime.py  task_detection.py  ui.html
src/tlc_plugin_yolo/models/: __init__.py  base.py  yolo.py
